fix: button text aligns with icons

--- a/energymanager/frontend/scss/components/buttons.scss
+++ b/energymanager/frontend/scss/components/buttons.scss
@@ -2,6 +2,7 @@
 
 .button-primary {
     display: inline-flex;
+    align-items: center;
     gap: 1rem;
     color: black;
     text-align: start;
